--- a/app/src/main/res/layout/item_review.xml
+++ b/app/src/main/res/layout/item_review.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/white">
 
     <ImageView
         android:id="@+id/iv_profile"
@@ -16,6 +17,7 @@
 
     <TextView
         style="@style/Body1"
+        android:textColor="@color/gray_scale8"
         android:id="@+id/tv_nickname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -44,6 +46,8 @@
         />
 
     <TextView
+        style="@style/Body4"
+        android:textColor="@color/gray_scale8"
         android:id="@+id/tv_star_total"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -65,6 +69,7 @@
     <TextView
         android:id="@+id/tv_recommend_review"
         style="@style/Caption1"
+        android:textColor="@color/gray_scale7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="리뷰 추천"
