--- a/app/src/main/res/layout/item_community_feed_photo.xml
+++ b/app/src/main/res/layout/item_community_feed_photo.xml
@@ -6,8 +6,8 @@
     
     <ImageView
         android:id="@+id/item_community_feed_photo"
-        android:layout_width="308dp"
-        android:layout_height="184dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:src="@drawable/ex_feed_photo"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
