--- a/app/src/main/res/layout/activity_list_information.xml
+++ b/app/src/main/res/layout/activity_list_information.xml
@@ -1,217 +1,192 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".presentation.view.list.ListInformationActivity">
 
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <ImageView
-                android:id="@+id/backbutton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="21dp"
-                android:layout_marginTop="47dp"
-                android:src="@drawable/ic_back" />
-
-            <TextView
-                android:id="@+id/LocationName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="14dp"
-                android:layout_marginTop="44dp"
-                android:gravity="center_vertical"
-                android:fontFamily="@font/pretendard_semibold"
-                android:text="서대문구청 전동보장구 급속충전기"
-                android:textSize="16sp" />
-
-
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/Distance"
-            android:layout_width="26dp"
-            android:layout_height="16dp"
-            android:layout_marginStart="30dp"
-            android:layout_marginTop="94dp"
-            android:textSize="12sp"
-            android:fontFamily="@font/pretendard_regular"
-            android:text="16m"/>
-
-
-        <ImageView
-            android:layout_width="12dp"
-            android:layout_height="12dp"
-            android:layout_marginStart="78dp"
-            android:layout_marginTop="96dp"
-            android:src="@drawable/ic_star" />
-
-
-
-        <TextView
-            android:id="@+id/Grade"
-            android:layout_width="48dp"
-            android:layout_height="16dp"
-            android:layout_marginStart="96dp"
-            android:layout_marginTop="94dp"
-            android:textSize="12sp"
-            android:fontFamily="@font/pretendard_regular"
-            android:text="4.41(15)" />
-
-
-
-
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginStart="35dp"
-            android:layout_marginTop="138dp"
-            android:layout_marginBottom="47dp"
-            >
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginEnd="57dp"
-                android:gravity="center">
-                <ImageView
-                    android:layout_width="41dp"
-                    android:layout_height="41dp"
-                    android:src="@drawable/iv_call" />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:fontFamily="@font/pretendard_medium"
-                    android:textSize="12sp"
-                    android:text="전화" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginEnd="57dp"
-                android:gravity="center">
-
-                <ImageView
-                    android:layout_width="41dp"
-                    android:layout_height="41dp"
-                    android:src="@drawable/iv_bookmark" />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:textSize="12sp"
-                    android:fontFamily="@font/pretendard_medium"
-                    android:text="즐겨찾기" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginEnd="57dp"
-                android:gravity="center">
-
-                <ImageView
-                    android:layout_width="41dp"
-                    android:layout_height="41dp"
-                    android:src="@drawable/iv_guide" />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:textSize="12sp"
-                    android:fontFamily="@font/pretendard_medium"
-                    android:text="길안내" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginEnd="35dp"
-                android:gravity="center">
-
-                <ImageView
-                    android:layout_width="41dp"
-                    android:layout_height="41dp"
-                    android:src="@drawable/iv_share" />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:textSize="12sp"
-                    android:fontFamily="@font/pretendard_medium"
-                    android:text="공유" />
-            </LinearLayout>
-
-        </LinearLayout>
-
-
-
-        <View
-            android:id="@+id/divider"
-            android:layout_width="match_parent"
-            android:layout_height="7dp"
-            android:layout_marginTop="219dp"
-            android:background="#E4E4E2"/>
-
-
-    <!--탭 레이아웃-->
-
-
-    <com.google.android.material.appbar.AppBarLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/divider"
-        android:theme="@style/TabTheme">
+        android:orientation="vertical">
 
-        <com.google.android.material.tabs.TabLayout
-            android:id="@+id/tabs"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/divider"
-            app:tabIndicatorColor="#F37E13"
-            app:tabIndicatorGravity="bottom"
-            app:tabIndicatorHeight="2dp"
-            app:tabMode="fixed"
-            app:tabGravity="fill"
-            app:tabIndicatorFullWidth="true"
-            app:tabTextAppearance="@style/CustomTabTextAppearance"/>
+            android:layout_height="wrap_content">
 
 
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/viewPager"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@id/tabs"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
+                <ImageView
+                    android:id="@+id/backbutton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="21dp"
+                    android:layout_marginTop="24dp"
+                    android:src="@drawable/ic_back" />
 
-    </com.google.android.material.appbar.AppBarLayout>
+                <TextView
+                    android:id="@+id/LocationName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="14dp"
+                    android:layout_marginTop="24dp"
+                    style="@style/Title1"
+                    android:textColor="@color/gray_scale8"
+                    android:text="서대문구청 전동보장구 급속충전기" />
+            </LinearLayout>
 
+            <TextView
+                android:id="@+id/Distance"
+                android:layout_width="26dp"
+                android:layout_height="16dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="94dp"
+                style="@style/Body4"
+                android:textColor="@color/gray_scale8"
+                android:text="16m"/>
 
+            <ImageView
+                android:layout_width="12dp"
+                android:layout_height="12dp"
+                android:layout_marginStart="78dp"
+                android:layout_marginTop="96dp"
+                android:src="@drawable/ic_star" />
 
+            <TextView
+                android:id="@+id/Grade"
+                android:layout_width="48dp"
+                android:layout_height="16dp"
+                android:layout_marginStart="96dp"
+                android:layout_marginTop="94dp"
+                style="@style/Body4"
+                android:textColor="@color/gray_scale8"
+                android:text="4.41(15)" />
 
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginStart="35dp"
+                android:layout_marginTop="138dp"
+                android:layout_marginBottom="47dp">
 
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_marginEnd="42dp"
+                    android:gravity="center">
+                    <ImageView
+                        android:layout_width="41dp"
+                        android:layout_height="41dp"
+                        android:src="@drawable/iv_call" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        style="@style/Body3"
+                        android:textColor="@color/gray_scale8"
+                        android:text="전화" />
+                </LinearLayout>
 
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_marginEnd="42dp"
+                    android:gravity="center">
+                    <ImageView
+                        android:layout_width="41dp"
+                        android:layout_height="41dp"
+                        android:src="@drawable/iv_bookmark" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        style="@style/Body3"
+                        android:textColor="@color/gray_scale8"
+                        android:text="즐겨찾기" />
+                </LinearLayout>
 
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_marginEnd="42dp"
+                    android:gravity="center">
+                    <ImageView
+                        android:layout_width="41dp"
+                        android:layout_height="41dp"
+                        android:src="@drawable/iv_guide" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        style="@style/Body3"
+                        android:textColor="@color/gray_scale8"
+                        android:text="길안내" />
+                </LinearLayout>
 
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:gravity="center">
+                    <ImageView
+                        android:layout_width="41dp"
+                        android:layout_height="41dp"
+                        android:src="@drawable/iv_share" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        style="@style/Body3"
+                        android:textColor="@color/gray_scale8"
+                        android:text="공유" />
+                </LinearLayout>
+            </LinearLayout>
 
+            <View
+                android:id="@+id/divider"
+                android:layout_width="match_parent"
+                android:layout_height="7dp"
+                android:layout_marginTop="219dp"
+                android:background="#E4E4E2"/>
 
+            <!--탭 레이아웃-->
 
-</RelativeLayout>
+            <com.google.android.material.appbar.AppBarLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/divider"
+                android:background="#F5F5F5"
+                android:theme="@style/TabTheme">
 
+                <com.google.android.material.tabs.TabLayout
+                    android:id="@+id/tabs"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/divider"
+                    android:background="#F5F5F5"
+                    app:tabIndicatorColor="#F37E13"
+                    app:tabIndicatorGravity="bottom"
+                    app:tabIndicatorHeight="2dp"
+                    app:tabMode="fixed"
+                    app:tabGravity="fill"
+                    app:tabIndicatorFullWidth="true" />
+
+                <androidx.viewpager2.widget.ViewPager2
+                    android:id="@+id/viewPager"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_below="@id/tabs"/>
+            </com.google.android.material.appbar.AppBarLayout>
+        </RelativeLayout>
+    </LinearLayout>
+</ScrollView>
