--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -95,10 +95,12 @@
             android:id="@+id/meter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="88dp"
+            android:layout_marginTop="90dp"
             android:layout_marginStart="5dp"
+            style="@style/Body3"
+            android:textColor="@color/gray_scale8"
             android:text="거리순"
-            android:textSize="12sp" />
+             />
 
 
     </LinearLayout>
@@ -122,10 +124,11 @@
                 android:id="@+id/star"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="88dp"
+                android:layout_marginTop="90dp"
                 android:layout_marginStart="5dp"
-                android:text="별점순"
-                android:textSize="12sp" />
+                style="@style/Body3"
+                android:textColor="@color/gray_scale6"
+                android:text="별점순" />
 
 
         </LinearLayout>
