--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,12 +4,13 @@
 
     <!--TabLayout item 디자인-->
 
-    <style name="TabTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <item name="colorPrimary">#222019</item>                                <!-- 배경 -->
+    <style name="TabTheme">
+        <item name="colorPrimary">@color/gray_scale8</item>                                <!-- 배경 -->
         <item name="textAppearanceBody1">@font/pretendard_semibold</item>
 
-        <item name="android:textColorPrimary">@android:color/white</item>       <!-- 탭바 선택된 텍스트 -->
-        <item name="android:textColorSecondary">@android:color/black</item>     <!-- 탭바 텍스트 -->
+
+        <item name="android:textColorPrimary">@color/gray_scale8</item>       <!-- 탭바 선택된 텍스트 -->
+        <item name="android:textColorSecondary">@color/gray_scale7</item>     <!-- 탭바 텍스트 -->
 
 
     </style>
