--- a/app/src/main/res/layout/activity_note_user_profile.xml
+++ b/app/src/main/res/layout/activity_note_user_profile.xml
@@ -18,15 +18,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/showMoreButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="26dp"
-        android:src="@drawable/showmorebutton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginEnd="20dp" />
+
 
     <View
         android:id="@+id/rectangle_1"
@@ -34,7 +26,7 @@
         android:layout_height="160dp"
         android:layout_marginTop="17dp"
         android:background="#FFF4EB"
-        app:layout_constraintTop_toBottomOf="@id/showMoreButton"
+        app:layout_constraintTop_toBottomOf="@id/backbutton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -48,18 +40,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-
-
-
     <ImageView
         android:id="@+id/userprofile"
         android:layout_width="83dp"
         android:layout_height="83dp"
         android:src="@drawable/userimage"
         android:layout_marginTop="17dp"
-        app:layout_constraintTop_toTopOf="@+id/rectangle_1"
-        app:layout_constraintStart_toStartOf="@+id/rectangle_1"
-        app:layout_constraintEnd_toEndOf="@+id/rectangle_1" />
+        app:layout_constraintTop_toTopOf="@id/rectangle_1"
+        app:layout_constraintStart_toStartOf="@id/rectangle_1"
+        app:layout_constraintEnd_toEndOf="@id/rectangle_1" />
 
     <TextView
         android:id="@+id/usernameTextView"
@@ -68,10 +57,9 @@
         android:text="김한주"
         style="@style/Head1"
         app:layout_constraintBottom_toBottomOf="@id/rectangle_1"
-        app:layout_constraintEnd_toEndOf="@+id/userprofile"
-        app:layout_constraintStart_toStartOf="@+id/userprofile"
-        app:layout_constraintTop_toBottomOf="@+id/userprofile" />
-
+        app:layout_constraintEnd_toEndOf="@id/userprofile"
+        app:layout_constraintStart_toStartOf="@id/userprofile"
+        app:layout_constraintTop_toBottomOf="@id/userprofile" />
 
     <TextView
         android:id="@+id/userIdTextView"
@@ -83,24 +71,110 @@
         android:layout_marginBottom="16dp"
         android:text="kimhanjooo"
         android:gravity="top"
-        app:layout_constraintTop_toBottomOf="@+id/usernameTextView"
-        app:layout_constraintStart_toStartOf="@+id/rectangle_1"
-        app:layout_constraintEnd_toEndOf="@+id/rectangle_1" />
-    
-    
-    
-    
+        app:layout_constraintTop_toBottomOf="@id/usernameTextView"
+        app:layout_constraintStart_toStartOf="@id/rectangle_1"
+        app:layout_constraintEnd_toEndOf="@id/rectangle_1" />
 
-
-
-
-    <ImageView
-        android:id="@+id/ic_complain"
+    <LinearLayout
+        android:id="@+id/layout_complain"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_complain"
-        android:layout_marginTop="31dp"
-        app:layout_constraintTop_toBottomOf="@id/rectangle_2"
-        app:layout_constraintStart_toStartOf="@id/rectangle_1"
-        app:layout_constraintEnd_toEndOf="parent" />
+        android:orientation="horizontal"
+        android:layout_marginStart="20dp"
+        app:layout_constraintStart_toStartOf="@id/rectangle_2"
+        app:layout_constraintTop_toBottomOf="@id/rectangle_2">
+
+        <ImageView
+            android:id="@+id/ic_complain"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_complain" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            style="@style/Title3"
+            android:textColor="@color/gray_scale8"
+            android:text="신고하기" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/layout_block"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="30dp"
+        app:layout_constraintStart_toStartOf="@id/layout_complain"
+        app:layout_constraintTop_toBottomOf="@id/layout_complain">
+
+        <ImageView
+            android:id="@+id/block"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_block" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            style="@style/Title3"
+            android:textColor="@color/gray_scale8"
+            android:text="차단하기" />
+    </LinearLayout>
+
+
+
+
+    <LinearLayout
+        android:id="@+id/layout_alarmoff"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="30dp"
+        app:layout_constraintStart_toStartOf="@id/layout_block"
+        app:layout_constraintTop_toBottomOf="@id/layout_block">
+
+        <ImageView
+            android:id="@+id/alarmoff"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_turnoff_alarm" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            style="@style/Title3"
+            android:textColor="@color/gray_scale8"
+            android:text="알림 끄기" />
+    </LinearLayout>
+
+
+
+
+    <LinearLayout
+        android:id="@+id/layout_"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="30dp"
+        app:layout_constraintStart_toStartOf="@id/layout_alarmoff"
+        app:layout_constraintTop_toBottomOf="@id/layout_alarmoff">
+
+        <ImageView
+            android:id="@+id/chatout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_chatout" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            style="@style/Title3"
+            android:textColor="@color/gray_scale8"
+            android:text="채팅방 나가기" />
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
