--- a/app/src/main/res/layout/activity_community_detail.xml
+++ b/app/src/main/res/layout/activity_community_detail.xml
@@ -31,6 +31,7 @@
         app:layout_constraintBottom_toBottomOf="@id/community_detail_back_icon"/>
     
     <ImageView
+        android:id="@+id/community_detail_see_more"
         android:layout_width="3dp"
         android:layout_height="14dp"
         android:src="@drawable/see_more_btn"
@@ -93,15 +94,22 @@
         app:layout_constraintTop_toTopOf="@id/community_detail_user_profile"
         app:layout_constraintBottom_toBottomOf="@id/community_detail_user_profile"/>
 
-    <TextView
+    <ImageView
+        android:id="@+id/community_detail_writer_request_btn"
+        android:layout_width="73dp"
+        android:layout_height="32dp"
+        android:src="@drawable/button_requesting"
+        android:visibility="gone"
+        android:layout_marginEnd="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/community_detail_user_profile"
+        app:layout_constraintBottom_toBottomOf="@id/community_detail_user_profile"/>
+
+    <ImageView
         android:id="@+id/community_detail_help_category"
         android:layout_width="50dp"
         android:layout_height="22dp"
-        android:gravity="center"
-        android:text="요청 중"
-        android:textSize="12sp"
-        android:textColor="@color/gray_scale6"
-        android:background="@drawable/category_style"
+        android:src="@drawable/icon_tag_requesting"
         android:visibility="gone"
         android:layout_marginStart="10dp"
         android:layout_marginTop="8dp"
@@ -114,6 +122,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_marginStart="10dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@id/community_detail_help_category"
         app:layout_constraintStart_toStartOf="parent">
 
@@ -123,8 +132,7 @@
             android:layout_height="wrap_content"
             android:text="제목"
             android:textSize="16sp"
-            android:textColor="@color/gray_scale8"
-            android:layout_marginTop="5dp" />
+            android:textColor="@color/gray_scale8" />
         <TextView
             android:id="@+id/community_detail_content"
             android:layout_width="wrap_content"
