--- a/app/src/main/res/layout/item_community_feed.xml
+++ b/app/src/main/res/layout/item_community_feed.xml
@@ -64,16 +64,16 @@
             app:layout_constraintTop_toBottomOf="@id/item_community_post_user_profile"
             app:layout_constraintStart_toStartOf="parent"/>
 
-<!--        <androidx.recyclerview.widget.RecyclerView-->
-<!--            android:id="@+id/item_community_post_category_view"-->
-<!--            android:layout_width="0dp"-->
-<!--            android:layout_height="22dp"-->
-<!--            android:orientation="horizontal"-->
-<!--            android:layout_marginStart="10dp"-->
-<!--            android:layout_marginTop="8dp"-->
-<!--            tools:listitem="@layout/item_category"-->
-<!--            app:layout_constraintTop_toBottomOf="@id/item_community_post_user_profile"-->
-<!--            app:layout_constraintStart_toStartOf="parent"/>-->
+        <ImageView
+            android:id="@+id/item_community_post_category_help"
+            android:layout_width="wrap_content"
+            android:layout_height="22dp"
+            android:src="@drawable/icon_tag_requesting"
+            android:visibility="gone"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@id/item_community_post_user_profile"
+            app:layout_constraintStart_toEndOf="@id/item_community_post_category_view"/>
 
         <LinearLayout
             android:id="@+id/item_community_post_container"
