--- a/app/src/main/res/layout/item_comment_notification.xml
+++ b/app/src/main/res/layout/item_comment_notification.xml
@@ -64,4 +64,14 @@
         app:layout_constraintStart_toEndOf="@id/notification_detail"
         app:layout_constraintTop_toTopOf="@id/notification_detail"/>
 
+    <View
+        android:id="@+id/divider"
+        android:layout_width="0dp"
+        android:layout_height="2dp"
+        android:background="@color/gray_scale3"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintWidth_percent="1"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
