--- a/app/src/main/res/layout/activity_community_detail.xml
+++ b/app/src/main/res/layout/activity_community_detail.xml
@@ -226,23 +226,25 @@
         android:id="@+id/divider2"
         android:layout_width="0dp"
         android:layout_height="9dp"
-        android:background="#D7D7D5"
+        android:background="@color/gray_scale3"
         android:layout_marginTop="17dp"
         app:layout_constraintTop_toBottomOf="@id/community_detail_like_icon"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintWidth_percent="1"/>
 
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/community_detail_comment_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:listitem="@layout/item_comment"
-        app:layout_constraintTop_toBottomOf="@id/divider2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/divider2"
+        tools:listitem="@layout/item_comment" />
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/community_detail_chatting_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -257,16 +259,11 @@
             android:id="@+id/camera_button"
             android:layout_width="28dp"
             android:layout_height="28dp"
-            android:layout_marginStart="5dp"
-            android:background="@drawable/icon_camera"/>
-
-        <ImageButton
-            android:id="@+id/unlock_button"
-            android:layout_width="28dp"
-            android:layout_height="28dp"
+            android:src="@drawable/icon_camera"
             android:layout_marginStart="10dp"
-            android:layout_marginEnd="5dp"
-            android:background="@drawable/icon_unlock"/>
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
 
         <EditText
             android:id="@+id/message_input"
@@ -274,28 +271,42 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@drawable/rounded_edittext"
-            android:hint="채팅을 입력하세요"
+            android:hint="댓글을 입력해 주세요."
             android:padding="14dp"
-            android:textColor="#2D415F"
-            android:textSize="13sp"
-            android:layout_marginRight="5dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
+            android:textColor="@color/gray_scale5"
+            style="@style/Body2"
+            android:layout_marginStart="8dp"
             android:inputType="textMultiLine"
             android:maxLines="4"
             android:minLines="1"
             android:scrollbars="vertical"
-            android:overScrollMode="always" />
+            android:overScrollMode="always"
+            app:layout_constraintWidth_percent="0.77"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/camera_button"/>
+
+        <ImageButton
+            android:id="@+id/unlock_button"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
+            android:src="@drawable/icon_unlock"
+            android:layout_marginEnd="3dp"
+            app:layout_constraintTop_toTopOf="@id/message_input"
+            app:layout_constraintBottom_toBottomOf="@id/message_input"
+            app:layout_constraintEnd_toEndOf="@id/message_input"/>
 
         <ImageButton
             android:id="@+id/send_button"
             android:layout_width="28dp"
             android:layout_height="28dp"
-            android:layout_marginEnd="5dp"
-            android:layout_marginStart="5dp"
-            android:background="@drawable/icon_send"
-            android:contentDescription="Send" />
-    </LinearLayout>
+            android:src="@drawable/icon_send"
+            android:contentDescription="Send"
+            android:layout_marginEnd="10dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
