[Style] 텍스트 style 수정

--- a/app/src/main/res/layout/activity_community_detail.xml
+++ b/app/src/main/res/layout/activity_community_detail.xml
@@ -23,8 +23,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="도와줘요"
+        style="@style/Title1"
         android:textColor="@color/gray_scale8"
-        android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/community_detail_back_icon"
@@ -44,7 +44,7 @@
         android:id="@+id/divider"
         android:layout_width="0dp"
         android:layout_height="2dp"
-        android:background="#D7D7D5"
+        android:background="@color/gray_scale3"
         android:layout_marginTop="15dp"
         app:layout_constraintTop_toBottomOf="@id/community_detail_back_icon"
         app:layout_constraintStart_toStartOf="parent"
@@ -67,7 +67,7 @@
         android:layout_height="wrap_content"
         android:text="사용자 이름"
         android:textColor="@color/gray_scale8"
-        android:textSize="14sp"
+        style="@style/Body1"
         android:layout_marginStart="8dp"
         app:layout_constraintStart_toEndOf="@id/community_detail_user_profile"
         app:layout_constraintTop_toTopOf="@id/community_detail_user_profile"
@@ -78,7 +78,7 @@
         android:layout_height="wrap_content"
         android:text="10분 전"
         android:textColor="@color/gray_scale7"
-        android:textSize="10sp"
+        style="@style/Caption1"
         android:layout_marginStart="8dp"
         app:layout_constraintTop_toBottomOf="@id/community_detail_user_name"
         app:layout_constraintStart_toEndOf="@id/community_detail_user_profile"
@@ -131,14 +131,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="제목"
-            android:textSize="16sp"
+            style="@style/Title2"
             android:textColor="@color/gray_scale8" />
         <TextView
             android:id="@+id/community_detail_content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="내용"
-            android:textSize="14sp"
+            style="@style/Body2"
             android:textColor="@color/gray_scale8"
             android:layout_marginTop="5dp"
             app:layout_constraintTop_toBottomOf="@id/community_detail_title"
@@ -173,7 +173,7 @@
         android:layout_height="wrap_content"
         android:text="1"
         android:textColor="@color/gray_scale7"
-        android:textSize="12sp"
+        style="@style/Body4"
         android:layout_marginStart="5dp"
         app:layout_constraintTop_toTopOf="@id/community_detail_like_icon"
         app:layout_constraintStart_toEndOf="@id/community_detail_like_icon"
@@ -184,7 +184,7 @@
         android:layout_height="wrap_content"
         android:text="좋아요"
         android:textColor="@color/gray_scale7"
-        android:textSize="12sp"
+        style="@style/Body4"
         android:layout_marginStart="5dp"
         app:layout_constraintTop_toTopOf="@id/community_detail_like_icon"
         app:layout_constraintStart_toEndOf="@id/community_detail_like_num"
@@ -205,7 +205,7 @@
         android:layout_height="wrap_content"
         android:text="3"
         android:textColor="@color/gray_scale7"
-        android:textSize="12sp"
+        style="@style/Body4"
         android:layout_marginStart="5dp"
         app:layout_constraintTop_toTopOf="@id/community_detail_comment_icon"
         app:layout_constraintStart_toEndOf="@id/community_detail_comment_icon"
@@ -216,7 +216,7 @@
         android:layout_height="wrap_content"
         android:text="댓글"
         android:textColor="@color/gray_scale7"
-        android:textSize="12sp"
+        style="@style/Body4"
         android:layout_marginStart="5dp"
         app:layout_constraintTop_toTopOf="@id/community_detail_comment_icon"
         app:layout_constraintStart_toEndOf="@id/community_detail_comment_num"
