--- a/app/src/main/res/layout/activity_community_writing.xml
+++ b/app/src/main/res/layout/activity_community_writing.xml
@@ -28,8 +28,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="글쓰기"
-            android:textSize="16sp"
-            android:textStyle="bold"
+            style="@style/Title1"
+            android:textColor="@color/gray_scale8"
             android:layout_marginTop="15dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -39,8 +39,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="등록"
-            android:textSize="16sp"
-            android:textStyle="bold"
+            style="@style/Title2"
             android:textColor="@color/gray_scale5"
             android:layout_marginTop="15dp"
             android:layout_marginEnd="20dp"
@@ -51,7 +50,7 @@
             android:id="@+id/divider1"
             android:layout_width="wrap_content"
             android:layout_height="2dp"
-            android:background="@color/gray_scale4"
+            android:background="@color/gray_scale3"
             android:layout_marginTop="15dp"
             app:layout_constraintTop_toBottomOf="@id/community_writing_name_tv"
             app:layout_constraintStart_toStartOf="parent"/>
@@ -63,7 +62,8 @@
             android:background="@drawable/background_spinner_option"
             android:overlapAnchor="false"
             android:popupBackground="@color/white"
-            android:textColor="@color/gray_scale8"
+            android:textColor="@color/gray_scale6"
+            style="@style/Title3"
             android:theme="@style/SpinnerTheme"
             app:layout_constraintBottom_toBottomOf="@id/divider2"
             app:layout_constraintEnd_toEndOf="parent"
@@ -90,8 +90,7 @@
             android:id="@+id/divider2"
             android:layout_width="wrap_content"
             android:layout_height="2dp"
-            android:background="@color/gray_scale4"
-
+            android:background="@color/gray_scale3"
             app:layout_constraintTop_toBottomOf="@id/community_select_category"
             app:layout_constraintStart_toStartOf="parent"/>
 
@@ -104,7 +103,7 @@
             android:background="@android:color/transparent"
             android:inputType="none"
             android:singleLine="true"
-            android:textSize="16sp"
+            style="@style/Title3"
             android:textColor="@color/gray_scale8"
             android:layout_marginTop="15dp"
             android:layout_marginStart="20dp"
@@ -115,7 +114,7 @@
             android:id="@+id/divider3"
             android:layout_width="wrap_content"
             android:layout_height="2dp"
-            android:background="@color/gray_scale4"
+            android:background="@color/gray_scale3"
             android:layout_marginTop="15dp"
             app:layout_constraintTop_toBottomOf="@id/community_writing_title_tv"
             app:layout_constraintStart_toStartOf="parent"/>
@@ -144,7 +143,7 @@
             android:id="@+id/divider4"
             android:layout_width="wrap_content"
             android:layout_height="2dp"
-            android:background="@color/gray_scale4"
+            android:background="@color/gray_scale3"
             android:layout_marginTop="15dp"
             app:layout_constraintTop_toBottomOf="@id/community_writing_image_select"
             app:layout_constraintStart_toStartOf="parent"/>
@@ -157,6 +156,7 @@
             android:textColorHint="@color/gray_scale6"
             android:background="@android:color/transparent"
             android:textColor="@color/gray_scale8"
+            style="@style/Body2"
             android:inputType="none"
             android:imeOptions="actionDone"
             android:layout_marginTop="15dp"
