--- a/app/src/main/res/layout/dialog_community_user_see_more.xml
+++ b/app/src/main/res/layout/dialog_community_user_see_more.xml
@@ -24,7 +24,7 @@
             android:background="@drawable/unselect_help_status"
             android:text="차단하기"
             android:textColor="@color/gray_scale7"
-            android:textSize="16sp"
+            style="@style/Title2"
             android:layout_marginTop="20dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -38,7 +38,7 @@
             android:background="@drawable/unselect_help_status"
             android:text="신고하기"
             android:textColor="@color/red"
-            android:textSize="16sp"
+            style="@style/Title2"
             android:layout_marginBottom="20dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
