--- a/app/src/main/res/layout/dialog_help_status.xml
+++ b/app/src/main/res/layout/dialog_help_status.xml
@@ -24,7 +24,7 @@
             android:background="@drawable/select_help_status"
             android:text="요청 중"
             android:textColor="@color/white"
-            android:textSize="16sp"
+            style="@style/Title2"
             android:layout_marginTop="25dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -38,7 +38,7 @@
             android:background="@drawable/unselect_help_status"
             android:text="연락 중"
             android:textColor="@color/gray_scale6"
-            android:textSize="16sp"
+            style="@style/Title2"
             android:layout_marginTop="10dp"
             app:layout_constraintTop_toBottomOf="@id/dialog_help_request"
             app:layout_constraintStart_toStartOf="parent"
@@ -52,7 +52,7 @@
             android:background="@drawable/unselect_help_status"
             android:text="해결 완료"
             android:textColor="@color/gray_scale6"
-            android:textSize="16sp"
+            style="@style/Title2"
             android:layout_marginTop="10dp"
             app:layout_constraintTop_toBottomOf="@id/dialog_help_contacting"
             app:layout_constraintStart_toStartOf="parent"
