--- a/app/src/main/res/layout/fragment_community.xml
+++ b/app/src/main/res/layout/fragment_community.xml
@@ -49,9 +49,9 @@
             android:layout_marginTop="15dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/community_search_iv"
-            app:tabIndicatorColor="#F37E13"
+            app:tabIndicatorColor="@color/main_orange"
             app:tabIndicatorGravity="bottom"
-            app:tabSelectedTextColor="@color/black"/>
+            app:tabSelectedTextColor="@color/gray_scale8"/>
 
         <LinearLayout
             android:id="@+id/community_recommended_layout"
@@ -68,14 +68,14 @@
                 android:layout_width="4dp"
                 android:layout_height="4dp"
                 android:src="@drawable/btn_sort_selected"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
                 android:layout_marginRight="6dp"/>
             <TextView
                 android:id="@+id/community_recommended_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="추천순"
-                android:textSize="15sp"
+                style="@style/Body3"
                 android:textColor="@color/black" />
         </LinearLayout>
 
@@ -94,14 +94,14 @@
                 android:layout_width="4dp"
                 android:layout_height="4dp"
                 android:src="@drawable/btn_sort_unselected"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
                 android:layout_marginRight="6dp"/>
             <TextView
                 android:id="@+id/community_time_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="시간순"
-                android:textSize="15sp"
+                style="@style/Body3"
                 android:textColor="@color/gray_scale6" />
         </LinearLayout>
 
