--- a/app/src/main/res/layout/item_comment_notification.xml
+++ b/app/src/main/res/layout/item_comment_notification.xml
@@ -2,76 +2,115 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/white">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ImageView
-        android:id="@+id/notification_userimage"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginEnd="16dp"
-        android:src="@drawable/userimage"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="15dp"
-        android:layout_marginStart="20dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/notification_user_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="김한주"
-        style="@style/Body1"
-        android:textColor="@color/gray_scale8"
-        android:layout_marginTop="15dp"
-        android:layout_marginStart="8dp"
-        app:layout_constraintStart_toEndOf="@id/notification_userimage"
-        app:layout_constraintTop_toTopOf="parent"/>
+        <!-- 하단 삭제 view 영역 -->
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/erase_item_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/notification_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=" 님이 회원님의 게시글에 댓글을 남겼습니다: "
-        style="@style/Body1"
-        android:textColor="@color/gray_scale8"
-        android:layout_marginTop="15dp"
-        app:layout_constraintStart_toEndOf="@id/notification_user_name"
-        app:layout_constraintTop_toTopOf="parent"/>
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintWidth_percent="0.18"
+                android:background="@color/gray_scale5">
 
-    <TextView
-        android:id="@+id/notification_detail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="그럼 조금만 기다리세요!"
-        style="@style/Body2"
-        android:textColor="@color/gray_scale8"
-        android:layout_marginTop="4dp"
-        android:layout_marginStart="8dp"
-        app:layout_constraintTop_toBottomOf="@id/notification_user_name"
-        app:layout_constraintStart_toEndOf="@id/notification_userimage"/>
+                <ImageView
+                    android:id="@+id/ExitButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:padding="12dp"
+                    android:src="@drawable/icon_alarm_delete"/>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <TextView
-        android:id="@+id/notification_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="2분 전"
-        style="@style/Body2"
-        android:textColor="@color/gray_scale5"
-        android:layout_marginStart="7dp"
-        app:layout_constraintStart_toEndOf="@id/notification_detail"
-        app:layout_constraintTop_toTopOf="@id/notification_detail"/>
 
-    <View
-        android:id="@+id/divider"
-        android:layout_width="0dp"
-        android:layout_height="2dp"
-        android:background="@color/gray_scale3"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintWidth_percent="1"/>
+        <!-- 기존 View -->
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:id="@+id/comment_notify">
+
+            <ImageView
+                android:id="@+id/notification_userimage"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginEnd="16dp"
+                android:src="@drawable/userimage"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="15dp"
+                android:layout_marginStart="20dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+
+            <TextView
+                android:id="@+id/notification_user_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="김한주"
+                style="@style/Body1"
+                android:textColor="@color/gray_scale8"
+                android:layout_marginTop="15dp"
+                android:layout_marginStart="8dp"
+                app:layout_constraintStart_toEndOf="@id/notification_userimage"
+                app:layout_constraintTop_toTopOf="parent"/>
+
+            <TextView
+                android:id="@+id/notification_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=" 님이 회원님의 게시글에 댓글을 남겼습니다: "
+                style="@style/Body1"
+                android:textColor="@color/gray_scale8"
+                android:layout_marginTop="15dp"
+                app:layout_constraintStart_toEndOf="@id/notification_user_name"
+                app:layout_constraintTop_toTopOf="parent"/>
+
+            <TextView
+                android:id="@+id/notification_detail"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="그럼 조금만 기다리세요!"
+                style="@style/Body2"
+                android:textColor="@color/gray_scale8"
+                android:layout_marginTop="4dp"
+                android:layout_marginStart="8dp"
+                app:layout_constraintTop_toBottomOf="@id/notification_user_name"
+                app:layout_constraintStart_toEndOf="@id/notification_userimage"/>
+
+            <TextView
+                android:id="@+id/notification_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="2분 전"
+                style="@style/Body2"
+                android:textColor="@color/gray_scale5"
+                android:layout_marginStart="8dp"
+                app:layout_constraintStart_toEndOf="@id/notification_detail"
+                app:layout_constraintTop_toTopOf="@id/notification_detail"/>
+
+            <View
+                android:id="@+id/divider"
+                android:layout_width="0dp"
+                android:layout_height="2dp"
+                android:background="@color/gray_scale3"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintWidth_percent="1"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
