--- a/app/src/main/res/layout/item_community_feed.xml
+++ b/app/src/main/res/layout/item_community_feed.xml
@@ -36,7 +36,7 @@
             android:layout_height="wrap_content"
             android:text="사용자 이름"
             android:textColor="@color/gray_scale8"
-            android:textSize="14sp"
+            style="@style/Body1"
             android:layout_marginStart="8dp"
             app:layout_constraintStart_toEndOf="@id/item_community_post_user_profile"
             app:layout_constraintTop_toTopOf="@id/item_community_post_user_profile"
@@ -48,7 +48,7 @@
             android:layout_height="wrap_content"
             android:text="몇분 전"
             android:textColor="@color/gray_scale7"
-            android:textSize="10sp"
+            style="@style/Caption1"
             android:layout_marginEnd="30dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@id/item_community_post_user_profile"
@@ -90,14 +90,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="제목"
-                android:textSize="16sp"
+                style="@style/Title2"
                 android:textColor="@color/gray_scale8" />
             <TextView
                 android:id="@+id/item_community_post_content"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="내용"
-                android:textSize="14sp"
+                style="@style/Body2"
                 android:textColor="@color/gray_scale8"
                 android:layout_marginTop="5dp"
                 app:layout_constraintTop_toBottomOf="@id/item_community_post_title"
@@ -133,7 +133,7 @@
             android:layout_height="wrap_content"
             android:text="1"
             android:textColor="@color/gray_scale7"
-            android:textSize="12sp"
+            style="@style/Body4"
             android:layout_marginStart="5dp"
             app:layout_constraintTop_toTopOf="@id/item_community_post_like_icon"
             app:layout_constraintStart_toEndOf="@id/item_community_post_like_icon"
@@ -144,7 +144,7 @@
             android:layout_height="wrap_content"
             android:text="좋아요"
             android:textColor="@color/gray_scale7"
-            android:textSize="12sp"
+            style="@style/Body4"
             android:layout_marginStart="5dp"
             app:layout_constraintTop_toTopOf="@id/item_community_post_like_icon"
             app:layout_constraintStart_toEndOf="@id/item_community_post_like_num"
@@ -165,7 +165,7 @@
             android:layout_height="wrap_content"
             android:text="3"
             android:textColor="@color/gray_scale7"
-            android:textSize="12sp"
+            style="@style/Body4"
             android:layout_marginStart="5dp"
             app:layout_constraintTop_toTopOf="@id/item_community_post_comment_icon"
             app:layout_constraintStart_toEndOf="@id/item_community_post_comment_icon"
@@ -176,7 +176,7 @@
             android:layout_height="wrap_content"
             android:text="댓글쓰기"
             android:textColor="@color/gray_scale7"
-            android:textSize="12sp"
+            style="@style/Body4"
             android:layout_marginStart="5dp"
             app:layout_constraintTop_toTopOf="@id/item_community_post_comment_icon"
             app:layout_constraintStart_toEndOf="@id/item_community_post_comment_num"
