--- a/app/src/main/res/layout/item_writing_community_image.xml
+++ b/app/src/main/res/layout/item_writing_community_image.xml
@@ -56,7 +56,7 @@
             android:layout_height="wrap_content"
             android:text="대표"
             android:textColor="@color/white"
-            android:textSize="9dp"
+            style="@style/Caption1"
             android:layout_gravity="center" />
 
     </FrameLayout>
