--- a/app/src/main/res/drawable/dialog_basic.xml
+++ b/app/src/main/res/drawable/dialog_basic.xml
@@ -1,7 +1,8 @@
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
     <solid android:color="@color/white"/>
     <corners
-        android:radius="10dp"/>
+        android:radius="12dp"/>
     <stroke
         android:width="2dp"
         android:color="@color/white"/>
