--- a/app/src/main/res/layout/activity_list_information.xml
+++ b/app/src/main/res/layout/activity_list_information.xml
@@ -43,7 +43,7 @@
 
             <TextView
                 android:id="@+id/Distance"
-                android:layout_width="26dp"
+                android:layout_width="wrap_content"
                 android:layout_height="16dp"
                 android:layout_marginStart="30dp"
                 android:layout_marginTop="94dp"
